     this allows for 'random slopes')

   o in the various forest() functions, when options(na.action="na.pass") or
     options(na.action="na.exclude") and an annotation contains NA, this is
     now shown as a blank (instead of NA [NA, NA])

   o the various forest() and addpoly() functions gain a 'fonts' argument

   o the various forest() functions gain a 'top' argument

   o forest.cumul.rma() gains a 'col' argument

   o addpoly() functions can now also show credibility interval bounds

   o removed 'formula interface' from escalc(); until this actually adds
     some kind of extra functionality, this just makes escalc() more
     confusing to use

   o escalc() can now compute the coefficient of variation ratio and the
     variability ratio for pre-post or matched designs ("CVRC", "VRC")

   o escalc() does a bit more housekeeping

   o added (currently undocumented) arguments 'onlyo1', 'addyi', and 'addvi'
     to escalc() that allow for more flexibility when computing certain bias
     corrections and when computing sampling variances for measures that
     make use of the 'add' and 'to' arguments

   o escalc() now sets 'add=0' for measures where the use of such a bias
     correction makes little sense; this applies to the following measures:
     "AS", "PHI", "RTET", "IRSD", "PAS", "PFT", "IRS", and "IRFT"; one can
     still force the use of the bias correction by explicitly setting the
     'add' argument to some non-zero value

   o labbe() gains 'lty' argument

   o labbe() now (invisibly) returns a data frame with the coordinates of
     the points that were drawn (which may be useful for manual labeling of
     points in the plot)

   o added a print method for 'profile.rma' objects

   o profile.rma.mv() now check whether any of the profiled log-likelihood
     values is larger than the log-likelihood of the fitted model (using
     numerical tolerance given by 'lltol') and issues a warning if so
