@@ -244,8 +244,13 @@ cex, cex.lab, cex.axis, annosym, ...) {
       } else {                                  ### default psize is proportional to inverse standard error
          wi    <- 1/sqrt(vi)                    ### note: vi's that are NA are ignored (but vi's whose yi is
          psize <- wi/sum(wi, na.rm=TRUE)        ### NA are NOT ignored; an unlikely case in practice)
-         psize <- (psize - min(psize, na.rm=TRUE)) / (max(psize, na.rm=TRUE) - min(psize, na.rm=TRUE))
-         psize <- (psize * 1.0) + 0.5           ### note: only vi's that are still in the subset are used for determining the default point sizes
+         rng   <- max(psize, na.rm=TRUE) - min(psize, na.rm=TRUE)
+         if (rng <= .Machine$double.eps^0.5) {
+            psize <- rep(1, k)
+         } else {
+            psize <- (psize - min(psize, na.rm=TRUE)) / rng
+            psize <- (psize * 1.0) + 0.5        ### note: only vi's that are still in the subset are used for determining the default point sizes
+         }
          if (all(is.na(psize)))                 ### if k=1, then psize is NA, so catch this (and maybe some other problems)
             psize <- rep(1, k)
       }
